# fast-crawler-python

./: .gitignore  README.md  pyproject.toml
fast_crawler/: crawler.py  main.py
tests/: test_crawler.py
