[tool.poetry]
name = "fast-crawler"
version = "0.1.0"
description = "A fast web crawler with concurrent processing capabilities"
authors = ["Nestor Urquiza <nestor.urquiza@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_crawler"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fast-crawler = "fast_crawler.main:cli"
